header/footer/slide/main Settings/login Form

--- a/yataverse/src/main/resources/static/css/img.css
+++ b/yataverse/src/main/resources/static/css/img.css
@@ -5,3 +5,9 @@
   display: block;
   margin: 0 auto;
 }
+
+.navbar-brand img{
+            overflow: hidden;
+            height:50px;
+            width:200px;
+        }
