--- a/yataverse/src/main/resources/templates/layouts/header.mustache
+++ b/yataverse/src/main/resources/templates/layouts/header.mustache
@@ -13,13 +13,12 @@
 
     <title>Yataverse!</title>
 </head>
-<body>
+<body class="pt-5">
 <!-- navigation -->
 <nav class="navbar navbar-light bg-light fixed-top">
     <div class="container-fluid">
         <a class="navbar-brand" href="#">
-            <img src="/docs/5.1/assets/brand/bootstrap-logo.svg" alt="" width="30" height="24">
-            Yataverse!
+            <img src="https://user-images.githubusercontent.com/88410343/146048494-59197ec8-256b-47c0-9991-d7880813a776.png" alt="" width="60" height="24">
         </a>
         <button class="navbar-toggler" type="button" data-bs-toggle="offcanvas" data-bs-target="#offcanvasNavbar" aria-controls="offcanvasNavbar">
             <span class="navbar-toggler-icon"></span>
@@ -32,10 +31,10 @@
             <div class="offcanvas-body">
                 <ul class="navbar-nav justify-content-end flex-grow-1 pe-3">
                     <li class="nav-item">
-                        <a class="nav-link active" aria-current="page" href="#">Home</a>
+                        <a class="nav-link active" aria-current="page" href="/">Home</a>
                     </li>
                     <li class="nav-item">
-                        <a class="nav-link" href="#">Link</a>
+                        <a class="nav-link" href="/login">Login</a>
                     </li>
                     <li class="nav-item dropdown">
                         <a class="nav-link dropdown-toggle" href="#" id="offcanvasNavbarDropdown" role="button" data-bs-toggle="dropdown" aria-expanded="false">
