--- a/yataverse/src/main/resources/templates/join.mustache
+++ b/yataverse/src/main/resources/templates/join.mustache
@@ -5,11 +5,11 @@
     <div class="input-form-backgroud row">
         <div class="input-form col-md-12 mx-auto">
             <h4 class="mb-3">Join us</h4>
-            <form class="validation-form" action="/join/create" method="post" onsubmit="return formChk();">
+            <form class="validation-form" action="/join" method="post" onsubmit="return formChk();">
                 <div class="mb-3">
-                    <label for="userid">ID</label>
-                    <input type="text" class="form-control" id="userid" name="userid" placeholder="" required>
-                    <div class="invalid-feedback"> Please check your id </div>
+                    <label for="email">Email</label>
+                    <input type="email" class="form-control" id="email" name="email" placeholder="you@example.com" required>
+                    <div class="invalid-feedback"> Please check your email </div>
                 </div>
                 <div id="id_warn"></div>
                 <div class="mb-3">
@@ -23,11 +23,6 @@
                     <div class="invalid-feedback"> Please check your pwd </div>
                 </div>
                 <div id="pwd_warn"></div>
-                <div class="mb-3">
-                    <label for="email">Mail Address</label>
-                    <input type="email" class="form-control" id="email" name="email" placeholder="you@example.com" required>
-                    <div class="invalid-feedback"> Please check your email </div>
-                </div>
                 <div class="mb-3">
                     <label for="address">City</label>
                     <input type="text" class="form-control" id="address" name="address" placeholder="Gu Gangnam, City Seoul" required>
@@ -52,9 +47,9 @@
 
 <script>
 $(document).ready(function(){
-    $('#userid').focusout(function(){
-        let userid = $('#userid').val();
-        let myData = { "userid" : userid };
+    $('#email').focusout(function(){
+        let email = $('#email').val();
+        let myData = { "email" : email };
 
         $.ajax({
             url : 'idchk'
@@ -62,14 +57,14 @@ $(document).ready(function(){
             , data : myData
             , success : function(resp){
                 if(resp == 0) {
-                    $('#id_warn').text("사용중인 아이디입니다.");
+                    $('#id_warn').text("사용중인 이메일입니다.");
                     $("#id_warn").css("color", "red");
                     $("#id_warn").css("font-size", "15px");
 					$("#id_warn").css("margin-left", "0px");
 
 					$("#submitBtn").attr("disabled", true);
                 } else {
-                    $('#id_warn').text("사용 가능한 아이디입니다.");
+                    $('#id_warn').text("사용 가능한 이메일입니다.");
                     $("#id_warn").css("color", "blue");
                     $("#id_warn").css("font-size", "15px");
 					$("#id_warn").css("margin-left", "0px");
@@ -82,7 +77,6 @@ $(document).ready(function(){
 })
 
 function formChk(){
-    let userid = $('#userid').val();
     let userpwd = $('#userpwd').val();
     let pwdchk = $('#pwdchk').val();
     let address = $('#address').val();
@@ -90,13 +84,6 @@ function formChk(){
     let useraddress = address + " " + address2;
     $('#finaladdress').val(useraddress);
 
-    if(userid.trim().length < 3 || userid.trim().length > 10){
-        $('#id_warn').text("아이디는 3~10글자 이내로 입력해주세요.");
-        $("#id_warn").css("color", "red");
-        $("#id_warn").css("font-size", "15px");
-        $("#id_warn").css("margin-left", "0px");
-        return false;
-    }
     if(userpwd.trim().length < 3 || userpwd.trim().length > 10){
         $('#pwd_warn').text("비밀번호는 3~10글자 이내로 입력해주세요.");
         $("#pwd_warn").css("color", "red");
