--- a/yataverse/src/main/resources/templates/layouts/header.mustache
+++ b/yataverse/src/main/resources/templates/layouts/header.mustache
@@ -27,7 +27,12 @@
         </button>
         <div class="offcanvas offcanvas-end" tabindex="-1" id="offcanvasNavbar" aria-labelledby="offcanvasNavbarLabel">
             <div class="offcanvas-header">
-                <h5 class="offcanvas-title" id="offcanvasNavbarLabel">님, 안녕하세요.</h5>
+                {{^loginId}}
+                    <h5 class="offcanvas-title" id="offcanvasNavbarLabel">로그인 해주세요.</h5>
+                {{/loginId}}
+                {{#loginId}}
+                    <h5 class="offcanvas-title" id="offcanvasNavbarLabel">{{loginId}}님, 안녕하세요.</h5>
+                {{/loginId}}
                 <button type="button" class="btn-close text-reset" data-bs-dismiss="offcanvas" aria-label="Close"></button>
             </div>
             <div class="offcanvas-body">
@@ -35,12 +40,22 @@
                     <li class="nav-item">
                         <a class="nav-link active" aria-current="page" href="/">Home</a>
                     </li>
+                {{^loginId}}
                     <li class="nav-item">
                         <a class="nav-link" href="/login">Login</a>
                     </li>
                     <li class="nav-item">
                         <a class="nav-link" href="/join">Join us</a>
                     </li>
+                {{/loginId}}
+                {{#loginId}}
+                    <li class="nav-item">
+                        <a class="nav-link" href="/logout">Logout</a>
+                    </li>
+                    <li class="nav-item">
+                        <a class="nav-link" href="/modify">Modify</a>
+                    </li>
+                {{/loginId}}
                     <li class="nav-item dropdown">
                         <a class="nav-link dropdown-toggle" href="#" id="offcanvasNavbarDropdown" role="button" data-bs-toggle="dropdown" aria-expanded="false">
                             Dropdown
