Security,WebSocket Setting / Chat!

--- a/yataverse/src/main/resources/templates/join.mustache
+++ b/yataverse/src/main/resources/templates/join.mustache
@@ -2,7 +2,7 @@
 
 <!-- content -->
 <div class="container">
-    <div class="input-form-backgroud row">
+    <div class="input-form-backgroud row pt-5">
         <div class="input-form col-md-12 mx-auto">
             <h4 class="mb-3">Join us</h4>
             <form class="validation-form" action="/join" method="post" onsubmit="return formChk();">
