--- a/yataverse/src/main/resources/templates/layouts/header.mustache
+++ b/yataverse/src/main/resources/templates/layouts/header.mustache
@@ -13,6 +13,7 @@
 
     <title>Yataverse!</title>
     <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.5.1/jquery.min.js"></script>
+    <script src="https://cdnjs.cloudflare.com/ajax/libs/sockjs-client/1.4.0/sockjs.js"></script>
     <script src='https://code.jquery.com/jquery-2.2.4.min.js'></script>
 </head>
 <body class="pt-5">
@@ -20,7 +21,7 @@
 <nav class="navbar navbar-light bg-light fixed-top">
     <div class="container-fluid">
         <a class="navbar-brand" href="/">
-            <img src="https://user-images.githubusercontent.com/88410343/146048494-59197ec8-256b-47c0-9991-d7880813a776.png" alt="" width="60" height="24">
+            <img src="https://user-images.githubusercontent.com/88410343/146375210-d6e8f74c-6bbf-4ba9-8908-465f38c02f07.png" alt="" width="60" height="22">
         </a>
         <button class="navbar-toggler" type="button" data-bs-toggle="offcanvas" data-bs-target="#offcanvasNavbar" aria-controls="offcanvasNavbar">
             <span class="navbar-toggler-icon"></span>
@@ -61,7 +62,7 @@
                             Dropdown
                         </a>
                         <ul class="dropdown-menu" aria-labelledby="offcanvasNavbarDropdown">
-                            <li><a class="dropdown-item" href="#">Action</a></li>
+                            <li><a class="dropdown-item" href="/chat">Chat!</a></li>
                             <li><a class="dropdown-item" href="#">Another action</a></li>
                             <li>
                                 <hr class="dropdown-divider">
