--- a/yataverse/src/main/resources/templates/layouts/card.mustache
+++ b/yataverse/src/main/resources/templates/layouts/card.mustache
@@ -10,7 +10,9 @@
         </div>
     </div>
     <div class="card">
-        <img src="https://user-images.githubusercontent.com/88410343/146376002-be208031-9053-4c50-b4d5-561388817ac4.jpg" class="card-img-top" alt="...">
+        <a href="/trade">
+            <img src="https://user-images.githubusercontent.com/88410343/146376002-be208031-9053-4c50-b4d5-561388817ac4.jpg" class="card-img-top" alt="...">
+        </a>
         <div class="card-body">
             <h5 class="card-title">Yataverse Trade!</h5>
             <p class="card-text">Try to trade things with the people in the neighborhood!</p>
