--- a/yataverse/src/main/resources/static/css/img.css
+++ b/yataverse/src/main/resources/static/css/img.css
@@ -5,7 +5,15 @@
   display: block;
   margin: 0 auto;
 }
+.map img {
 
+	max-width: none;
+
+	height: auto;
+
+	border: 0
+
+}
 
 .card img{
     overflow: hidden;
@@ -23,6 +31,22 @@
 
 .chat {
     display: flex;
+}
+.wrapper {
+    display: flex;
+    margin: auto;
+}
+.colsell {
+
+    width:500px;
+}
+.textar {
+    height:300px;
+    resize:none;
+}
+.thumbcard img{
+    width:300px;
+    height:500px;
 }
 
         .chat-message {
@@ -76,12 +100,11 @@
         	margin-top: 7px;
         	position: relative;
         	padding: 10px 20px;
-        	margin-left: 300px;
+        	margin: auto;
         	background: #F1F2F8;
         	font-size: 13px;
         	font-family: sans-serif;
         	color: black;
-        	float: left;
         }
 
         .from-them {
@@ -134,5 +157,7 @@
         	margin-bottom: 1px;
         	line-height: 24px;
         }
-
+        .btn-del{
+            display: inline-block;
+        }
 
