--- a/yataverse/src/main/resources/templates/layouts/footer.mustache
+++ b/yataverse/src/main/resources/templates/layouts/footer.mustache
@@ -1,7 +1,7 @@
 <!-- site info -->
-<div class="mb-5 container-fluid">
+<div class="mb-5 container-fluid" style="text-align:center;">
     <hr>
-    <p>ⓒ Yataverse · <a href="#">privacy</a> · <a href="#">terms</a></p>
+    <p>ⓒ Yataverse · Made by : AnHyunTae <a href="https://github.com/HYUNTAEAN" target="_blank">Github</a> · Email : EngineerHyuntae@Gmail.com</p>
 </div>
 <!-- Optional JavaScript; choose one of the two! -->
 <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.1.3/dist/js/bootstrap.bundle.min.js" integrity="sha384-ka7Sk0Gln4gmtz2MlQnikT1wXgYsOg+OMhuP+IlRH9sENBO0LRn5q+8nbTov4+1p" crossorigin="anonymous"></script>
