--- a/yataverse/src/main/resources/templates/layouts/slide.mustache
+++ b/yataverse/src/main/resources/templates/layouts/slide.mustache
@@ -5,26 +5,32 @@
             <button type="button" data-bs-target="#carouselExampleCaptions" data-bs-slide-to="1" aria-label="Slide 2"></button>
             <button type="button" data-bs-target="#carouselExampleCaptions" data-bs-slide-to="2" aria-label="Slide 3"></button>
         </div>
-        <div class="carousel-inner" style="height:450px;">
+        <div class="carousel-inner pt-5" style="height:450px;">
             <div class="carousel-item active">
-                <img src="https://user-images.githubusercontent.com/88410343/143783340-ac1e9858-b397-4e36-9da7-c5fa50b652e9.png" class="d-block w-100" alt="...">
+                <a href="https://about.yahoo.co.jp/hr/potential/" target="_blank">
+                    <img src="https://user-images.githubusercontent.com/88410343/146055814-9b64b182-cb80-4e65-90ca-99821bc8a800.jpg" class="d-block w-100" alt="...">
+                </a>
                 <div class="carousel-caption d-none d-md-block">
-                    <h5>First slide label</h5>
-                    <p>Some representative placeholder content for the first slide.</p>
+                    <h5>Yahoo! Japan Potential Recruitment</h5>
+                    <p>ポテンシャル採用の情報はこちらへ</p>
                 </div>
             </div>
             <div class="carousel-item">
-                <img src="https://user-images.githubusercontent.com/88410343/146055814-9b64b182-cb80-4e65-90ca-99821bc8a800.jpg" class="d-block w-100" alt="...">
+                <a href="/info">
+                    <img src="https://user-images.githubusercontent.com/88410343/146430676-aa952baa-7857-41e7-8d78-95f27e79f37c.png" class="d-block w-100" alt="...">
+                </a>
                 <div class="carousel-caption d-none d-md-block">
-                    <h5>Second slide label</h5>
-                    <p>Some representative placeholder content for the second slide.</p>
+                    <h5>About 'Yataverse!'</h5>
+                    <p>プロジェクト概要と機能についてはこちらへ</p>
                 </div>
             </div>
             <div class="carousel-item">
-                <img src="https://user-images.githubusercontent.com/88410343/138067853-d7ed49d4-0df2-49a6-a503-f99d8f2e7782.png" class="d-block w-100" alt="...">
+                <a href="https://github.com/HYUNTAEAN" target="_blank">
+                    <img src="https://user-images.githubusercontent.com/88410343/146429387-1f25321c-6b08-43bc-a34e-a1fe567b7bef.png" class="d-block w-100" alt="...">
+                </a>
                 <div class="carousel-caption d-none d-md-block">
-                    <h5>Third slide label</h5>
-                    <p>Some representative placeholder content for the third slide.</p>
+                    <h5>My Github</h5>
+                    <p>The detailed code of the portfolio works is here.</p>
                 </div>
             </div>
         </div>
