--- a/yataverse/src/main/resources/templates/trade.mustache
+++ b/yataverse/src/main/resources/templates/trade.mustache
@@ -8,8 +8,10 @@
 <div class="row row-cols-1 row-cols-md-3 g-4 pt-5">
     <div class="col">
         <div class="card h-100">
-            <img src="https://user-images.githubusercontent.com/88410343/146472711-29f1cf77-71e6-4dc6-a68d-617d4b7a5453.png" class="card-img-top" alt="...">
-            <div class="card-body">
+            <a href="/howtouse">
+                <img src="https://user-images.githubusercontent.com/88410343/146472711-29f1cf77-71e6-4dc6-a68d-617d4b7a5453.png" class="card-img-top" alt="...">
+            </a>
+                <div class="card-body">
                 <h5 class="card-title">How to use?</h5>
                 <p class="card-text">Information about Yataverse Trade!</p>
             </div>
@@ -31,7 +33,9 @@
             });
             </script>
             <div class="card-body">
-                <h5 class="card-title">{{itemName}}</h5>
+                <a href="/detail?id={{id}}">
+                    <h5 class="card-title">{{itemName}}</h5>
+                </a>
                 <p class="card-text">{{itemDesc}}</p>
             </div>
         </div>
