--- a/yataverse/src/main/resources/templates/layouts/header.mustache
+++ b/yataverse/src/main/resources/templates/layouts/header.mustache
@@ -16,6 +16,7 @@
     <script src="https://cdnjs.cloudflare.com/ajax/libs/sockjs-client/1.4.0/sockjs.js"></script>
     <script src='https://code.jquery.com/jquery-2.2.4.min.js'></script>
     <script type="text/javascript" src="https://openapi.map.naver.com/openapi/v3/maps.js?ncpClientId=trfxqwxihu"></script>
+
 </head>
 <body class="pt-5">
 <!-- navigation -->
@@ -24,6 +25,17 @@
         <a class="navbar-brand" href="/">
             <img src="https://user-images.githubusercontent.com/88410343/146375210-d6e8f74c-6bbf-4ba9-8908-465f38c02f07.png" alt="" width="60" height="22">
         </a>
+    {{#loginId}}
+        <div class="letter-box">
+            <button type="button" class="btn btn-primary position-relative" onclick="location.href='/msgbox'">
+                Message Box
+                <span class="position-absolute top-0 start-100 translate-middle badge rounded-pill bg-danger">
+                    99+
+                    <span class="visually-hidden">unread messages</span>
+                </span>
+            </button>
+        </div>
+    {{/loginId}}
         <button class="navbar-toggler" type="button" data-bs-toggle="offcanvas" data-bs-target="#offcanvasNavbar" aria-controls="offcanvasNavbar">
             <span class="navbar-toggler-icon"></span>
         </button>
