--- a/yataverse/src/main/resources/templates/layouts/card.mustache
+++ b/yataverse/src/main/resources/templates/layouts/card.mustache
@@ -6,7 +6,6 @@
         <div class="card-body">
             <h5 class="card-title">Yataverse Chat!</h5>
             <p class="card-text">Enjoy chatting with people all over the world!</p>
-            <p class="card-text"><small class="text-muted">Last updated 3 mins ago</small></p>
         </div>
     </div>
     <div class="card">
@@ -16,15 +15,15 @@
         <div class="card-body">
             <h5 class="card-title">Yataverse Trade!</h5>
             <p class="card-text">Try to trade things with the people in the neighborhood!</p>
-            <p class="card-text"><small class="text-muted">Last updated 3 mins ago</small></p>
         </div>
     </div>
     <div class="card">
-        <img src="https://user-images.githubusercontent.com/88410343/146377192-6643b17f-33d6-4eef-b71f-ba151cbd6565.jpg" class="card-img-top" alt="...">
+        <a href="/qna?idx=0">
+            <img src="https://user-images.githubusercontent.com/88410343/146377192-6643b17f-33d6-4eef-b71f-ba151cbd6565.jpg" class="card-img-top" alt="...">
+        </a>
         <div class="card-body">
             <h5 class="card-title">Yasukete!</h5>
             <p class="card-text">Share your knowledge through questions and answers!</p>
-            <p class="card-text"><small class="text-muted">Last updated 3 mins ago</small></p>
         </div>
     </div>
     <div class="card">
