--- a/yataverse/src/main/resources/static/css/img.css
+++ b/yataverse/src/main/resources/static/css/img.css
@@ -52,6 +52,10 @@
     width:465px;
     resize:none;
 }
+.textar3 {
+    height:300px;
+    resize:none;
+}
 .thumbcard img{
     width:300px;
     height:500px;
