--- a/yataverse/src/main/resources/templates/sell.mustache
+++ b/yataverse/src/main/resources/templates/sell.mustache
@@ -23,7 +23,7 @@
             <div class="input-form-backgroud row">
                 <div class="input-form col-md-12 mx-auto">
                     <h4 class="mb-3">Sell</h4>
-                    <form class="validation-form" action="/sellProcess" method="post" enctype="multipart/form-data" onsubmit="return formChk();">
+                    <form class="validation-form" action="/sellProcess" method="post" onsubmit="return formChk();">
                         <div class="mb-3">
                             <label for="itemname">제목</label>
                             <input type="text" class="form-control" id="itemName" name="itemName" placeholder="" required>
