--- a/yataverse/src/main/resources/templates/qna.mustache
+++ b/yataverse/src/main/resources/templates/qna.mustache
@@ -25,7 +25,7 @@
                     </div>
                     <ul>
                     {{#ansList}}
-                            ↳ 【 {{email}} 】 : {{questDesc}}   <button type="button" class="btn btn-success no-rounded" style="height:40px; margin:right;" onclick="location.href='/delReply?id={{id}}'">Delete</button>
+                            ↳ 【 {{email}} 】 : {{questDesc}}   <button type="button" class="btn btn-success no-rounded" style="height:40px; margin-left: 30px;" onclick="location.href='/delReply?id={{id}}'">Delete</button>
                                 <hr class="dropdown-divider">
                     {{/ansList}}
                     </ul>
@@ -46,14 +46,22 @@
 
     <nav aria-label="Page navigation example">
         <ul class="pagination justify-content-center">
-            <li class="page-item disabled">
-                <a class="page-link">Previous</a>
-            </li>
-            <li class="page-item"><a class="page-link" href="#">1</a></li>
-            <li class="page-item"><a class="page-link" href="#">2</a></li>
-            <li class="page-item"><a class="page-link" href="#">3</a></li>
             <li class="page-item">
-                <a class="page-link" href="#">Next</a>
+                <a class="page-link" onclick="prePage();">Previous</a>
+            </li>
+            {{#nowPage}}
+            <input type="hidden" id="nPage" value="{{nowPage}}">
+            {{/nowPage}}
+            {{#firstPage}}
+            <input type="hidden" id="fPage" value="{{firstPage}}">
+            {{/firstPage}}
+            {{#page}}
+            <li class="page-item" id="pli{{.}}">
+                <a class="page-link" onclick="location.href='/qna?idx={{.}}'">{{.}}</a>
+            </li>
+            {{/page}}
+            <li class="page-item">
+                <a class="page-link" onclick="nextPage();">Next</a>
             </li>
         </ul>
     </nav>
@@ -61,10 +69,40 @@
 {{>layouts/footer}}
 
 <script>
+
+$(document).ready(function(){
+    let nPage = $('#nPage').val();
+    $('#pli'+nPage).addClass('active');
+});
+
     function answer(id){
         let frm = $('#ansFrm'+id);
         frm.submit();
     }
 
+    function prePage(){
+        let page = $('#fPage').val();
+        if(page == 1){
+            return;
+        }
+        let pre = page-1;
+        location.href='/qna?idx='+pre;
+    }
+
+    function nextPage(){
+        let page = ($('#fPage').val())*1;
+        let myData = {"page" : page};
+        let next = page + 5;
+        $.ajax({
+            url : 'pageChk'
+            , method : 'GET'
+            , data : myData
+            , success : function(resp){
+                if(resp == "Success"){
+                    location.href='/qna?idx='+next;
+                }
+            }
+        });
+    }
 
 </script>
