--- a/yataverse/src/main/resources/templates/layouts/header.mustache
+++ b/yataverse/src/main/resources/templates/layouts/header.mustache
@@ -100,7 +100,7 @@
                     </li>
                             <li><a class="dropdown-item" href="/chat">▶ Chat!</a></li>
                             <li><a class="dropdown-item" href="/trade">▶ Trade!</a></li>
-                            <li><a class="dropdown-item" href="#">▶ Yasukete!</a></li>
+                            <li><a class="dropdown-item" href="/qna?idx=1">▶ Yasukete!</a></li>
                     <li>
                         <hr class="dropdown-divider">
                     </li>
